--- a/src/components/combat/combat.html
+++ b/src/components/combat/combat.html
@@ -1,3 +1,17 @@
 <template>
-  <h1>Combat</h1>
+  <div class="combat">
+    <table class="weapons">
+      <tr repeat.for="weapon of data.inventory.weapons">
+        <td>
+          ${weapon.name}
+        </td>
+        <td>
+          ${data.character.profiencyBonus}
+        </td>
+        <td>
+          ${weapon.damage} ${weapon.damageType}
+        </td>
+      </div>
+    </div>
+  </div>
 </template>
