--- a/src/components/combat/combat.html
+++ b/src/components/combat/combat.html
@@ -1,17 +1,30 @@
 <template>
+  <require from="../../resources/value-converters/attackBonus"></require>
+  <require from="./weapon/weapon"></require>
+
   <div class="combat">
     <table class="weapons">
+      <!--weapon repeat.for="weapon of data.inventory.weapons" model.bind="weapon"></weapon-->
       <tr repeat.for="weapon of data.inventory.weapons">
         <td>
           ${weapon.name}
         </td>
         <td>
-          ${data.character.profiencyBonus}
+          ${weapon | attackBonus:data}
         </td>
         <td>
           ${weapon.damage} ${weapon.damageType}
         </td>
-      </div>
+      </tr>
+    </table>
+    <div class="armor">
+      AC: ${armorClass}
+    </div>
+    <div class="initiative">
+      Initiative: ${initiative}
+    </div>
+    <div class="hitpoints">
+      HP: ${currentHP}/${data.character.maxHP}
     </div>
   </div>
 </template>
