--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -1,74 +1,98 @@
-.attribute-area {
+.character {
+  display: flex;
+}
+.character .editbutton {
+  position: fixed;
+  top: 50px;
+  right: 0;
+  margin: 10px;
+}
+.character .attribute-area {
+  flex: 1 auto;
   padding: 0 10px;
 }
-.attribute-table {
+.character .attribute-table {
   border-collapse: separate;
   border-spacing: 0 10px;
 }
-.attribute {
+.character .attribute {
   margin-top: 10px;
 }
-  .attribute .stat {
+  .character .attribute .stat {
+    display: flex;
+    flex-direction: column;
     border: 1px solid black;
     padding: 5px;
   }
-    .attribute .stat .stat-header {
+    .character .attribute .stat .stat-header {
+      flex: 0 auto;
       text-transform: uppercase;
       font-size: 10px;
       text-align: center;
     }
-    .attribute .stat .stat-value {
+    .character .attribute .stat .stat-value {
+      flex: 1 auto;
       font-size: 24px;
+      vertical-align: middle;
       text-align: center;
     }
-    .attribute .stat .stat-modifier {
+    .character .attribute .stat .stat-modifier {
+      flex: 0 auto;
       font-size: 16px;
       text-align: center;
     }
 
-  .attribute .skills {
+  .character .attribute .skills {
     display: flex;
+    max-height: 60px;
+    flex-direction: column;
+    rows: 3;
     flex-wrap: wrap;
   }
-    .attribute .skills .skill {
+    .character .attribute .skills .skill {
       flex: 0 auto;
       padding: 0 10px;
       margin: auto 0 0;
     }
-      .attribute .skills .skill .skill-header {
-        text-align: center;
+      .character .attribute .skills .skill .skill-header {
+        display: inline-block;
         font-size: 10px;
         text-transform: uppercase;
-        text-align: center;
+        vertical-align: middle;
       }
-        .attribute .skills .skill-header.proficient::after {
+        .character .attribute .skills .skill-header.proficient::after {
           content: '*';
         }
-      .attribute .skills .skill .skill-value {
-        text-align: center;
+      .character .attribute .skills .skill .skill-value {
+        display: inline-block;
         font-size: 16px;
-        text-align: center;
+        margin-left: 5px;
+        vertical-align: middle;
       }
-.features {
-  display: flex;
-  margin-bottom: 10px;
-}
-.features > * {
+.character .features-area {
   flex: 1 auto;
+  padding: 0 10px 10px 0;
 }
-
-.profiency-area {
-  padding: 0 5px 0 10px;
-}
-.traits-area {
-  padding: 0 10px 0 5px;
-}
-.profiency-area .profiency-header,
-.traits-area .traits-header {
-  margin: 0 0 10px 0;
-}
-.profiency-area .profiency-list,
-.traits-area .traits-list {
-  border: 1px solid black;
-  padding: 10px;
-}
+  .character .features {
+    display: flex;
+    margin-bottom: 10px;
+    flex-direction: column;
+  }
+  .character .features > * {
+    flex: 1 auto;
+  }
+  .character .profiency-area {
+    padding: 0;
+  }
+  .character .traits-area {
+    padding: 0;
+  }
+  .character .profiency-area .profiency-header,
+  .character .traits-area .traits-header {
+    margin: 10px 0;
+  }
+  .character .profiency-area .profiency-list,
+  .character .traits-area .traits-list {
+    border: 1px solid black;
+    padding: 10px;
+  }
