--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
 body {
   overflow: hidden;
-  font-family: 'Roboto';
+  font-family: 'Roboto Condensed';
+  color: #333;
   margin: 0;
   padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 table {
@@ -23,26 +28,45 @@ ul, ol {
   margin: 0;
 }
 
+h1 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 24px;
+  letter-spacing: 0;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 20px;
+  letter-spacing: 0;
+  font-weight: normal;
+}
+
 .navbar {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   position: fixed;
   top: 0;
-  height: 50px;
-  width: 100vw;
-  background: #aaa;
+  left: 0;
+  width: 50px;
+  height: 100vh;
+  background: #EEEEEE;
+  border-right: 1px solid #979797;
 }
+  .navbar .navbar-placeholder {
+    flex: 0 50px;
+    border-bottom: 1px solid #979797;
+  }
   .navbar .navbar-item {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
     text-decoration: none;
     text-transform: uppercase;
     color: #333;
-    flex: 0 auto;
-    padding: 0 20px;
-    border-right: 1px solid black;
+    flex: 0 50px;
+    padding: 0 5px;
+    border-bottom: 1px solid #979797;
   }
   .navbar .navbar-item:hover {
     background: #999;
@@ -51,9 +75,22 @@ ul, ol {
     text-decoration: underline;
   }
 
+.generalinfo {
+  position: fixed;
+  top: 0;
+  left: 50px;
+  line-height: 50px;
+  width: calc(100vw - 50px);
+  height: 50px;
+  border-bottom: 1px solid #979797;
+  padding-left: 10px;
+}
+
 .content {
   height: calc(100vh - 50px);
+  width: calc(100vw - 50px);
   overflow: auto;
   position: relative;
+  margin-left: 50px;
   margin-top: 50px;
 }
