--- a/src/components/character/skill/skill.html
+++ b/src/components/character/skill/skill.html
@@ -2,5 +2,6 @@
   <require from="../../../resources/value-converters/skillCalculator"></require>
 
   <div class="skill-header ${hasProfiency ? 'proficient' : ''}">${name}</div>
-  <div class="skill-value">${skillScore}</div>
+  <div class="skill-value" show.bind="!editMode">${skillScore}</div>
+  <div class="skill-edit" show.bind="editMode"><input type="checkbox" checked.bind="hasProfiency" /></div>
 </template>
