--- a/src/normalize.css
+++ b/src/normalize.css
@@ -425,3 +425,13 @@ template {
 [hidden] {
   display: none;
 }
+
+/* Eff focus highlights
+*/
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
