--- a/src/components/inventory/item/item.html
+++ b/src/components/inventory/item/item.html
@@ -8,5 +8,6 @@
   <template if.bind="model.equippable">
     <button click.delegate="unequip()">Unequip</button>
     <button click.delegate="equip()">Equip</button>
+    <button click.delegate="editPopup(model)">Edit</button>
   </template>
 </template>
