--- a/src/components/inventory/inventory.scss
+++ b/src/components/inventory/inventory.scss
@@ -19,9 +19,8 @@
   width: 400px;
   height: 300px;
   box-shadow: 0 2px 3px #888;
-}
-.newItem-area .hide {
-  display: block;
-}
-.newItem-createBtn {
+
+  .hide {
+    display: block;
+  }
 }
